# emscript

./: .gitignore  Cargo.toml  Makefile.toml  notes.md
em/: Cargo.toml  notes.md
em/src/: _test.em  ast.rs  c_ast.rs  em_mem.rs  ident.rs  interface.rs  ir.rs  main.rs  memory.rs  parse.rs  runtime.rs  test.api  test.em  token.rs  traits.rs  tree.rs  utils.rs  value.rs  verify.rs  wasm.rs  wir.rs
em_core/: Cargo.toml
em_core/src/: lib.rs  memory.rs
em_proc/: Cargo.toml
em_proc/src/: generate_translation_with_sizes.rs  lib.rs
em_wasmcore/: iter.em
src/: ast.rs  c_ast.rs  compile.rs  interface.rs  interpret.rs  ir.rs  main.rs  parse.rs  prim_tree.rs  runtime.rs  rust_ast.rs  test.api  test.em  token.rs  tree.rs  utils.rs  value.rs  verify.rs
wasm_libraries/: Cargo.toml
wasm_libraries/src/: iter.rs  lib.rs
