cargo-features = ["per-package-target"]

[package]
name = "wasm_libraries"
version = "0.1.0"
edition = "2021"

forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
em_core = { path = "../em_core" }
